@@ -1,12 +1,14 @@
-FROM gradle:7.4.2-jdk11
+FROM gradle:7.6-jdk17
 USER root
 WORKDIR /http4k
 COPY build.gradle build.gradle
 COPY settings.gradle settings.gradle
 COPY core core
+COPY core-jdbc core-jdbc
+COPY core-pgclient core-pgclient
 COPY ktornetty ktornetty
-RUN gradle --quiet ktornetty:shadowJar
+RUN gradle --quiet --no-daemon ktornetty:shadowJar
 
 EXPOSE 9000
 
-CMD ["java", "-server", "-XX:+UseNUMA", "-XX:+UseParallelGC", "-XX:+AggressiveOpts", "-XX:+AlwaysPreTouch", "-jar", "ktornetty/build/libs/http4k-ktornetty-benchmark.jar"]
+CMD ["java", "-server", "-XX:+UseNUMA", "-XX:+UseParallelGC", "-XX:+AlwaysPreTouch", "-jar", "ktornetty/build/libs/http4k-benchmark.jar"]
